# nook

./: .coderabbit.yaml  .coderabbit_review_branch-feature-tests-gpt-http_round-1_main.txt  .copilot_debug.txt  .copilot_review_round-1.txt  .coveragerc  .diff_tmp  .env  .env.example  .env.production  .env.production.example  .gitignore  .preamble.txt  .prompt_full.txt  .todo_list.md  CLAUDE.md  CODE_REVIEW_COMPREHENSIVE.md  CODE_REVIEW_DETAILED.md  CODE_REVIEW_FIXES_SUMMARY.md  CODE_REVIEW_SUMMARY.md  DEVELOPMENT_LOG.md  Dockerfile.backend  Dockerfile.frontend  FINAL_REVIEW_REPORT.md  FIVECHAN_TEST_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPROVEMENTS.md  PROJECT_COMPLETION_REPORT.md  README.md  README_TEST.md  REDDIT_OPTIMIZATION_REPORT.md  REDDIT_SETUP.md  REFACTORING_COMPREHENSIVE_SUMMARY.md  REFACTORING_PLAN.md  REVIEW_REFACTORING_EXAMPLE.md  REVIEW_REPORT_2.md  REVIEW_SECURITY_PERFORMANCE.md  SETUP.md  TEST_IMPROVEMENTS_SUMMARY.md  analyze_reviews.py  commit_log.txt  coverage.json  (+56 more)
.agent/artifacts/: implementation_plan.md
.gemini/artifacts/: task.md  walkthrough.md
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: auto-claude-request.yml  claude-test-fix.yml  claude.yml  js-tests.yml  python-tests.yml  telemetry.yml  tests.yml
.spec-workflow/templates/: tasks-template.md
assets/mockups/: README.md  mobile-comparison-generated.html  mobile-comparison.html
config/trendradar/: config.yaml  docker-compose.yml  frequency_words.txt
data/api_usage/: llm_usage_log.jsonl
data/business_feed/: 2025-06-23.md  2025-06-24.md
data/fivechan_explorer/: 2025-06-23.md  2025-06-24.md
data/fourchan_explorer/: 2025-06-23.md  2025-06-24.md
data/github_trending/: 2025-06-23.md
data/hacker_news/: 2025-06-23.md  hacker_news_2025-06-24.md
data/note_explorer/: 2025-06-23.md  2025-06-24.md
data/paper_summarizer/: 2025-06-24.md  arxiv_ids-2025-06-24.txt
data/qiita_explorer/: 2025-06-23.md  2025-06-24.md
data/reddit_explorer/: 2025-06-23.md  2025-06-24.md
data/tech_feed/: 2025-06-23.md  2025-06-24.md
data/zenn_explorer/: 2025-06-23.md  2025-06-24.md
deploy/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yaml  docker-rebuild.sh  docker-restart.sh
deploy/nginx/: .htpasswd  nginx.conf
doc/: detail_software_design.md  new_detail_software.design.md  refactoring_compatibility_layer.md  refactoring_prompts.md  test_coverage_enhancement_streams.md  test_coverage_enhancement_streams_additional.md  test_strategy_parallel_dev.md  trendradar_integration_plan.md  trendradar_platform_integrations.md  trendradar_platform_integrations_phase2.md
docs/: TEST_EXECUTION.md  TEST_IMPROVEMENT_HANDOFF.md  TEST_SPEC.md  TEST_SUMMARY.md  test_specifications_async_utils.md  test_specifications_base_service.md  test_specifications_daily_merge.md  test_specifications_date_utils.md  test_specifications_decorators.md  test_specifications_dedup.md  test_specifications_error_metrics.md  test_specifications_feed_utils.md  test_specifications_gpt_client.md  test_specifications_http_client.md  test_specifications_logging.md  test_specifications_rate_limiter.md  test_specifications_service_errors.md  test_specifications_storage.md
frontend/: .env.example  .lintstagedrc  eslint.config.js  package-lock.json  package.json  server.ts  tsconfig.app.json  vite.config.ts
frontend/.husky/: pre-commit
frontend/src/: App.tsx  api.ts  entry-client.tsx  entry-server.tsx  index.css  main.tsx  types.ts
handoffs/completed/: TASK-001-backend-fix-api-references.md
handoffs/pending/: TASK-002-error-handling-system.md  TASK-006-domain-restructure.md
nginx/: htpasswd_sample  nginx.conf
nook/api/: __init__.py  exceptions.py  main.py  run.py
nook/common/: __init__.py  async_utils.py  base_service.py  config.py  daily_merge.py  daily_snapshot.py  date_utils.py  decorators.py  dedup.py  error_metrics.py  exceptions.py  feed_utils.py  gpt_client.py  http_client.py  logging.py  logging_utils.py  rate_limiter.py  service_errors.py  storage.py
nook/core/: __init__.py  config.py
nook/frontend/: docker-rebuild.sh  index.html  package-lock.json  package.json  (+3 more)
paper_summarizer/: arxiv_ids-2025-06-24.txt  paper_summarizer_2025-06-24.md
playwright-tests/: responsive-mobile-menu.spec.ts
scripts/: CRAWL_SCHEDULED_GUIDE.md  README.md  convert_logs_to_jst.py  crawl_all.sh  crawl_scheduled.sh  crawl_with_days.sh  fix_llm_usage_logs.py  logs-jst.sh  measure_service_times.sh  result  schedule_example.txt  setup.sh
tests/: conftest.py
(+527 files in other folders)
