[project]
name = "nook"
version = "0.1.0"
description = "nook"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pip-audit>=2.9.0",
    "poethepoet>=0.38.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 88
lint.select = [
    "S",  # flake8-bandit (セキュリティチェック)
]
lint.ignore = [
    "E501",  # line too long
]
lint.per-file-ignores."tests/*" = ["S101"]  # テストファイルでのassert使用を許可

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "worktree/.*",
]

[tool.poe.tasks]
format = "uv run ruff format ."
lint = "uv run ruff check --fix ."
# type-check = "uv run mypy ."
test = "uv run pytest -n auto tests/ -v"
coverage = "uv run pytest -n auto --cov=src --cov-report=term"
audit = "uv run pip-audit"

# check = ["format", "lint", "type-check"]
check = ["format", "lint"]
quality-check = ["check", "test", "coverage", "audit"]
