[project]
name = "nook"
version = "0.1.0"
description = "nook"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncpraw>=7.7.0",
    "cloudscraper>=1.2.71",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "fastapi>=0.115.3",
    "uvicorn>=0.21.1",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.2.2",
    "arxiv>=2.3.1",
    "pdfplumber>=0.11.8",
    "beautifulsoup4>=4.14.3",
    "python-dateutil>=2.8.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pip-audit>=2.9.0",
    "poethepoet>=0.38.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 88
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "S",  # flake8-bandit (security)
]
lint.ignore = [
    "E501",  # line too long
]
lint.per-file-ignores."tests/*" = ["S101", "S105", "S106"]  # テストファイルでのassert使用を許可、テスト用の疑似パスワードを許可

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::RuntimeWarning:_pytest.unraisableexception",
    "ignore::RuntimeWarning:coverage.debug",
    "ignore::RuntimeWarning:unittest.mock",
    "ignore::RuntimeWarning:pydantic_settings.main",
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "worktree/.*",
]

[tool.poe.tasks]
format = "uv run ruff format ."
lint = "uv run ruff check --fix ."
# type-check = "uv run mypy ."
test = "uv run pytest -n auto tests/ -v"
coverage = "uv run pytest -n auto --cov=nook --cov-report=term"
audit = "uv run pip-audit --ignore-vuln GHSA-f83h-ghpp-7wcc --ignore-vuln CVE-2025-66418 --ignore-vuln CVE-2025-66471"

# check = ["format", "lint", "type-check"]
check = ["format", "lint"]
quality-check = ["check", "test", "coverage", "audit"]
